[package]
name = "email_auto_reg"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["socks", "rustls-tls", "json"] }
serde_json = "1.0"
futures = "0.3"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
